--- a/app/src/main/res/layout-v21/activity_file_detail_off_line.xml
+++ b/app/src/main/res/layout-v21/activity_file_detail_off_line.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:transitionName="share_icon"
+        android:transitionName="@string/trans_item_share_icon"
         app:srcCompat="@drawable/pdf"
         app:layout_constraintTop_toBottomOf="@+id/include4" />
 
