--- a/app/src/main/res/layout/item_file_trans_record.xml
+++ b/app/src/main/res/layout/item_file_trans_record.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="?selectableItemBackground"
-    android:layout_height="66dp">
+    android:layout_height="66dp"
+    android:background="?selectableItemBackground">
 
     <ImageView
         android:id="@+id/img_icon"
@@ -12,96 +11,99 @@
         android:layout_height="40dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/file"
-        android:layout_marginStart="15dp" />
+        app:srcCompat="@drawable/file" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="14dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="0dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="关于那件事.mp3"
         android:textColor="@color/text_gray"
         android:textSize="14sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/img_icon"
-        app:layout_constraintTop_toTopOf="@+id/img_icon"
         app:layout_constraintRight_toLeftOf="@+id/img_arrow"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/img_icon" />
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2017-6-10"
-        android:textSize="12sp"
-        android:textColor="@color/gray"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
+        android:text="2017-6-10"
+        android:textColor="@color/gray"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_icon"
-        android:layout_marginBottom="0dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
+        android:layout_marginStart="0dp" />
 
     <TextView
         android:id="@+id/tv_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2.4MB"
-        app:layout_constraintLeft_toRightOf="@+id/tv_time"
-        android:layout_marginLeft="20dp"
-        android:textSize="12sp"
-        android:textColor="@color/gray"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time"
         android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_time" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="0dp"
+        android:text="2.4MB"
+        android:textColor="@color/gray"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_time"
+        app:layout_constraintLeft_toRightOf="@+id/tv_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_time"
+        android:layout_marginStart="20dp" />
 
     <ImageView
         android:id="@+id/img_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:srcCompat="@drawable/icon_arrow"
-        android:scaleType="fitCenter"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginBottom="24dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.473" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.473"
+        app:srcCompat="@drawable/icon_arrow"
+        android:layout_marginEnd="16dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="3dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginEnd="8dp"
         android:progress="50"
-        android:progressDrawable="@drawable/progreessbar"
-        app:backgroundTint="@color/application_theme_color"
+        android:progressDrawable="@drawable/progressbar"
         app:layout_constraintBottom_toTopOf="@+id/tv_size"
+        app:layout_constraintEnd_toStartOf="@+id/tv_rate"
         app:layout_constraintLeft_toLeftOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_size"
-        app:layout_constraintVertical_bias="0.516" />
+        app:layout_constraintVertical_bias="0.5"
+        android:layout_marginRight="8dp" />
 
     <TextView
         android:id="@+id/tv_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="80kb/s"
-        app:layout_constraintLeft_toRightOf="@+id/progressBar"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_size"
+        app:layout_constraintEnd_toStartOf="@+id/img_arrow"
         app:layout_constraintTop_toBottomOf="@+id/tv_size"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_size" />
+        android:layout_marginRight="32dp" />
 </android.support.constraint.ConstraintLayout>
