--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -58,6 +58,8 @@
         <attr name="left_icon_size" format="dimension"/>
         <attr name="right_icon_size" format="dimension"/>
         <attr name="is_right_icon_visible" format="boolean"/>
+        <attr name="right_margin" format="dimension"/>
+        <attr name="left_margin" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="EasyBar">
