--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,6 @@
     <dimen name="little_icon_size">20dp</dimen>
     <dimen name="share_item_icon_size">50dp</dimen>
     <dimen name="imgBtn_long_width">272dp</dimen>
+    <dimen name="arrow_size">24dp</dimen>
+    <dimen name="mine_item_height">50dp</dimen>
 </resources>
