--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,4 +39,6 @@
     <dimen name="imgBtn_long_width">272dp</dimen>
     <dimen name="arrow_size">24dp</dimen>
     <dimen name="mine_item_height">50dp</dimen>
+    <dimen name="mine_item_margin_left">18dp</dimen>
+    <dimen name="mine_margin_right">13dp</dimen>
 </resources>
