--- a/app/src/main/res/layout/item_file_trans_record.xml
+++ b/app/src/main/res/layout/item_file_trans_record.xml
@@ -23,20 +23,18 @@
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="0dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="关于那件事.mp3"
         android:textColor="@color/text_gray"
         android:textSize="14sp"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/img_icon"
-        app:layout_constraintRight_toLeftOf="@+id/img_arrow"
-        app:layout_constraintTop_toTopOf="@+id/img_icon" />
+        app:layout_constraintTop_toTopOf="@+id/img_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginStart="14dp" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -100,10 +98,27 @@
         android:id="@+id/tv_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="64dp"
         android:text="80kb/s"
         app:layout_constraintBottom_toTopOf="@+id/tv_size"
-        app:layout_constraintEnd_toStartOf="@+id/img_arrow"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_size"
         android:layout_marginRight="32dp" />
+
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:button="@null"
+        android:visibility="invisible"
+        android:background="@drawable/checkbox_style"
+        android:layout_marginRight="16dp"
+        android:clickable="false"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
