--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,6 @@
     <dimen name="mine_item_height">50dp</dimen>
     <dimen name="mine_item_margin_left">18dp</dimen>
     <dimen name="mine_margin_right">13dp</dimen>
+    <dimen name="main_bottom_bar_height">45dp</dimen>
+    <dimen name="bar_item_height">55dp</dimen>
 </resources>
