--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -1,67 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/FullToStatusBarTheme">
 
     <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
+        android:background="@drawable/person_info_bg"
+        android:paddingTop="25dp"
         app:elevation="0dp"
         tools:context="com.sunny.youyun.activity.person_info.PersonInfoActivity">
 
-        <LinearLayout
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_scrollFlags="scroll">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <include
-                android:id="@+id/include8"
-                layout="@layout/bar_item" />
-
-            <ImageView
-                android:id="@+id/img_avatar"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"
-                app:srcCompat="@null" />
-
-            <TextView
-                android:id="@+id/tv_nickname"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:gravity="center"
-                android:text="SunnyQjm"
-                android:textColor="@color/text_gray"
-                android:textSize="18sp" />
+                android:background="@drawable/img_info_background"
+                android:orientation="vertical"
+                app:layout_collapseMode="parallax">
 
-            <TextView
-                android:id="@+id/tv_signature"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="16dp"
-                android:gravity="center"
-                android:text="普天之下，莫非王土，率土之滨，莫非王臣"
-                android:textColor="@color/text_gray"
-                android:textSize="14sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="24dp"
-                android:background="@color/line_gray" />
+                <com.sunny.youyun.views.EasyBar
+                    android:id="@+id/easyBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/bar_item_height"
+                    android:background="@color/transparent"
+                    app:icon_size="20dp"
+                    app:left_text="@string/back"
+                    app:right_text="@string/sure"
+                    app:title_color="@color/white"
+                    app:title_size="17sp">
 
 
-        </LinearLayout>
+                </com.sunny.youyun.views.EasyBar>
+
+                <ImageView
+                    android:id="@+id/img_avatar"
+                    android:layout_width="74dp"
+                    android:layout_height="74dp"
+                    android:padding="2dp"
+                    android:background="@drawable/avatar_circle_bg"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="12dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/icon_logo_round" />
+
+
+                <TextView
+                    android:id="@+id/tv_nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="14dp"
+                    android:background="@color/transparent"
+                    android:gravity="center"
+                    android:text="SunnyQjm"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_avatar" />
+
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:src="@drawable/icon_mine_info_edit"
+                    app:layout_constraintBottom_toTopOf="@id/tv_nickname"
+                    app:layout_constraintStart_toEndOf="@id/tv_nickname"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+
+                <View
+                    android:id="@+id/divide_line"
+                    android:layout_width="0.5dp"
+                    android:layout_height="12dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:text="关注  0"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toTopOf="@id/divide_line"
+                    app:layout_constraintEnd_toStartOf="@id/divide_line"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:text="粉丝  0"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toTopOf="@id/divide_line"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintStart_toEndOf="@id/divide_line"
+                    app:layout_constraintTop_toBottomOf="@id/divide_line"
+                    android:layout_marginStart="16dp" />
+
+                <TextView
+                    android:id="@+id/tv_signature"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    android:text="简介：普天之下，莫非王土，率土之滨，莫非王臣
+普天之下，莫非王土，率土之滨，莫非王臣
+普天之下，莫非王土，率土之滨，莫非王臣
+普天之下，莫非王土，率土之滨，莫非王臣"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
+
+
+            </android.support.constraint.ConstraintLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
 
     </android.support.design.widget.AppBarLayout>
@@ -76,9 +150,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:descendantFocusability="blocksDescendants"
-            >
+            android:orientation="vertical">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
@@ -93,6 +166,8 @@
 
             </android.support.design.widget.TabLayout>
 
+            <include layout="@layout/divide_item"/>
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
@@ -101,7 +176,7 @@
         </LinearLayout>
 
 
-          </android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 
 </android.support.design.widget.CoordinatorLayout>
