--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -6,7 +6,21 @@
         <item name="colorPrimary">@color/application_theme_color</item>
         <item name="colorPrimaryDark">@color/application_theme_color</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <!--设置状态栏的颜色-->
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!--&lt;!&ndash;设置状态栏的颜色&ndash;&gt;-->
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+    </style>
+
+    <style name="FullToStatusBarTheme" parent="AppTheme">
+        <item name="android:windowBackground">@mipmap/welcome</item>
         <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="WelcomeTheme" parent="AppTheme">
+        <item name="android:windowBackground">@mipmap/welcome</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <!-- Customize your theme here. -->
     </style>
 </resources>
