--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,6 +7,10 @@
         <item name="colorPrimaryDark">@color/application_theme_color</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
         <!--&lt;!&ndash; 允许使用transitions &ndash;&gt;-->
         <!--<item name="android:windowContentTransitions">true</item>-->
         <!--&lt;!&ndash;是否覆盖执行，其实可以理解成是否同步执行还是顺序执行&ndash;&gt;-->
