--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,16 +6,20 @@
         <item name="colorPrimary">@color/application_theme_color</item>
         <item name="colorPrimaryDark">@color/application_theme_color</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <!--设置状态栏的颜色-->
         <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
+    <style name="FullToStatusBarTheme" parent="AppTheme">
+    </style>
+
     <style name="WelcomeTheme" parent="AppTheme">
+
         <item name="android:windowBackground">@mipmap/welcome</item>
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/application_theme_color</item>
-        <item name="colorPrimaryDark">@color/transparent</item>
-        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="dialog" parent="@android:style/Theme.Dialog">
