--- a/app/src/main/res/layout/activity_file_detail_off_line.xml
+++ b/app/src/main/res/layout/activity_file_detail_off_line.xml
@@ -1,103 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sunny.youyun.activity.file_detail_off_line.FileDetailOffLineActivity">
+    android:background="@color/light_gray"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include
-        android:id="@+id/include4"
-        layout="@layout/bar_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="-2dp" />
+    <include layout="@layout/bar_item"/>
 
-    <ImageView
-        android:id="@+id/img_icon"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/pdf"
-        app:layout_constraintTop_toBottomOf="@+id/include4" />
+    <include layout="@layout/file_detail_off_line" />
 
-    <TextView
-        android:id="@+id/tv_file_name_size"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="42dp"
-        android:gravity="center"
-        android:text="文件名.pdf(1.0M)"
-        android:textColor="@color/text_gray"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_icon" />
+    <include layout="@layout/divide_item" />
 
-    <TextView
-        android:id="@+id/tv_code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
-        android:text="提取码：000000"
-        android:textColor="@color/text_gray"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_file_name_size" />
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/line_gray" />
 
+    <include layout="@layout/file_description_item" />
 
-    <Button
-        android:id="@+id/btn_detail_file"
-        android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/btn_bg"
-        android:text="详细信息"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        style="?borderlessButtonStyle"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+    <include layout="@layout/divide_item" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_code"
-        />
-
-    <Button
-        android:id="@+id/btn_open_file"
-        android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/btn_bg_white"
-        style="?borderlessButtonStyle"
-        android:text="打开文件"
-        android:textColor="@color/blue"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
