--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="mine_margin_right">13dp</dimen>
     <dimen name="main_bottom_bar_height">45dp</dimen>
     <dimen name="bar_item_height">55dp</dimen>
+    <dimen name="file_detail_online_icon_margin_top">20dp</dimen>
 </resources>
