增加文件管理操作，添加发现部分

--- a/app/src/main/res/layout/base_recycler_view_layout.xml
+++ b/app/src/main/res/layout/base_recycler_view_layout.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/light_gray"
     tools:context="com.sunny.youyun.base.fragment.BaseRecyclerViewFragment">
-    <include layout="@layout/bar_item"/>
     <com.sunny.youyun.views.easy_refresh.EasyRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
