--- a/app/src/main/res/drawable/ripple_bg_white.xml
+++ b/app/src/main/res/drawable/ripple_bg_white.xml
@@ -3,7 +3,7 @@
     <item android:state_focused="true" android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
-            <solid android:color="@color/gray" />
+            <solid android:color="@color/light_gray" />
         </shape>
     </item>
 
