--- a/app/src/main/res/layout/activity_person_file_manager.xml
+++ b/app/src/main/res/layout/activity_person_file_manager.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.sunny.youyun.activity.person_file_manager.PersonFileManagerActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/bar_item"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/classification_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+    <include layout="@layout/divide_item"/>
+
+
+    <View xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="0.5dp"
+        android:background="@color/line_gray" />
+    <include layout="@layout/person_file_manager_my_file_tag"/>
+
+    <include layout="@layout/divide_item"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/filerecycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+</LinearLayout>
