--- a/app/src/main/res/layout/file_detail_online.xml
+++ b/app/src/main/res/layout/file_detail_online.xml
@@ -54,7 +54,7 @@
         tools:layout_editor_absoluteY="321dp" />
 
     <com.sunny.youyun.views.RichText
-        android:id="@+id/rt_view_num"
+        android:id="@+id/rt_view_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -67,12 +67,12 @@
         app:drawable_height="@dimen/little_icon_size"
         app:drawable_src="@drawable/icon_view"
         app:drawable_width="@dimen/little_icon_size"
-        app:layout_constraintEnd_toStartOf="@+id/rt_like_num"
+        app:layout_constraintEnd_toStartOf="@+id/rt_like_count"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_code" />
 
     <com.sunny.youyun.views.RichText
-        android:id="@+id/rt_like_num"
+        android:id="@+id/rt_like_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_code" />
 
     <com.sunny.youyun.views.RichText
-        android:id="@+id/rt_down_num"
+        android:id="@+id/rt_down_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -104,7 +104,7 @@
         app:drawable_src="@drawable/icon_download_num"
         app:drawable_width="@dimen/little_icon_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/rt_like_num"
+        app:layout_constraintStart_toEndOf="@+id/rt_like_count"
         app:layout_constraintTop_toBottomOf="@+id/tv_code" />
 
     <Button
@@ -132,7 +132,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rt_like_num" />
+        app:layout_constraintTop_toBottomOf="@+id/rt_like_count" />
 
     <Button
         android:id="@+id/btn_download_now"
