--- a/app/src/main/res/layout/file_info_item.xml
+++ b/app/src/main/res/layout/file_info_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="?selectableItemBackground"
+    android:background="@drawable/ripple_bg_white"
     android:layout_height="@dimen/file_info_item_height">
 
     <ImageView
@@ -16,7 +16,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="15dp" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -37,7 +38,7 @@
         android:layout_marginEnd="8dp" />
 
     <TextView
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2017-6-10"
@@ -54,14 +55,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2.4MB"
-        app:layout_constraintLeft_toRightOf="@+id/tv_time"
+        app:layout_constraintLeft_toRightOf="@+id/tv_description"
         android:layout_marginLeft="20dp"
         android:textSize="12sp"
         android:textColor="@color/gray"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_time"
+        app:layout_constraintBottom_toTopOf="@+id/tv_description"
         android:layout_marginStart="20dp" />
 
     <CheckBox
