--- a/app/src/main/res/layout/file_info_item_for_delete.xml
+++ b/app/src/main/res/layout/file_info_item_for_delete.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="14dp" />
 
     <TextView
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2017-6-10"
@@ -53,14 +53,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2.4MB"
-        app:layout_constraintLeft_toRightOf="@+id/tv_time"
+        app:layout_constraintLeft_toRightOf="@+id/tv_description"
         android:layout_marginLeft="20dp"
         android:textSize="12sp"
         android:textColor="@color/gray"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_time"
+        app:layout_constraintBottom_toTopOf="@+id/tv_description"
         android:layout_marginStart="20dp" />
 
     <ImageView
