--- a/app/src/main/res/layout/item_file_trans_record.xml
+++ b/app/src/main/res/layout/item_file_trans_record.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="14dp" />
 
     <TextView
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
@@ -59,9 +59,9 @@
         android:text="2.4MB"
         android:textColor="@color/gray"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_time"
-        app:layout_constraintLeft_toRightOf="@+id/tv_time"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time"
+        app:layout_constraintBottom_toTopOf="@+id/tv_description"
+        app:layout_constraintLeft_toRightOf="@+id/tv_description"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         android:layout_marginStart="20dp" />
 
     <ImageView
