--- a/app/src/main/res/values-v17/styles.xml
+++ b/app/src/main/res/values-v17/styles.xml
@@ -32,4 +32,28 @@
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">true</item>
     </style>
+
+    <style name="PersonFileManagerOptionsGrayButtonStyle" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_marginStart">32dp</item>
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginEnd">32dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:background">@drawable/btn_bg_gray</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
+    <style name="PersonFileManagerOptionsRedButtonStyle" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_marginStart">32dp</item>
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginEnd">32dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:background">@drawable/btn_bg_red</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
 </resources>
