--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,6 @@
     <dimen name="main_bottom_bar_height">45dp</dimen>
     <dimen name="bar_item_height">55dp</dimen>
     <dimen name="file_detail_online_icon_margin_top">20dp</dimen>
+    <dimen name="collection_item_icon_size">60dp</dimen>
+    <dimen name="finding_item_icon_size">12dp</dimen>
 </resources>
