--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,4 +124,24 @@
         <item name="elevation">0dp</item>
         <item name="android:background">?attr/colorPrimary</item>
     </style>
+
+    <style name="PersonFileManagerOptionsGrayButtonStyle" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:background">@drawable/btn_bg_gray</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
+    <style name="PersonFileManagerOptionsRedButtonStyle" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:background">@drawable/btn_bg_red</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
 </resources>
