--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -68,6 +68,7 @@
         <attr name="right_icon_size" format="dimension"/>
         <attr name="is_right_icon_visible" format="boolean"/>
         <attr name="is_left_icon_visible" format="boolean"/>
+        <attr name="left_icon_text_span" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="LineMenuSwitch">
