添加Cookie失效后用LoginToken重新获取Cookie！ 修改按类型查看云上文件

--- a/app/src/main/res/layout/activity_person_file_manager.xml
+++ b/app/src/main/res/layout/activity_person_file_manager.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.sunny.youyun.activity.person_file_manager_index.PersonFileManagerActivity">
+    tools:context=".activity.person_file_manager.person_file_manager_index.PersonFileManagerActivity">
 
     <include layout="@layout/bar_item"/>
 
