--- a/app/src/main/res/layout/person_info_concern_item.xml
+++ b/app/src/main/res/layout/person_info_concern_item.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    >
 
 
     <ImageView
